Remove warning.png